have some major 'grid' issues on mobile that need to be fixed, the columns are overlapping the row and extending far beyond it

--- a/src/basket.sass
+++ b/src/basket.sass
@@ -15,19 +15,27 @@
 
 
 *, *::before, *::after
-  box-sizing: border-box
+  box-sizing: inherit
 
 // Remove focus highlighting on Chrome and other browsers
 *:focus
   outline: none
 
+html
+  box-sizing: border-box
+  font-size: 62.5%
   
-html, body
+body
   font-family: 'Inter', 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
   padding: 0
   margin: 0
   background: var(--bg-color)
   color: var(--text-color)
+  font-size: 1.6em
+  font-weight: 300
   letter-spacing: .01em
+  line-height: 1.6
+  word-wrap: break-word
   scroll-behavior: smooth
   transition: all 0.8s
+  
