--- a/src/blockquote.sass
+++ b/src/blockquote.sass
@@ -4,6 +4,7 @@
   padding: 1rem 1.5rem
   background: hsl(0, 0%, var(--lightness-hsl))
   color: var(--text-color)
+  overflow-x: auto
 
   *:last-child
     margin-bottom: 0
